src/objects/Programme__c.object
<CustomObject>
    <description>This is the Grant programme.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the programme</description>
        <inlineHelpText>A freetext field for departments to fill in any description of the Grant Programme they may have.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_My_Department_Data__c</fullName>
        <formula>LEFT(
 Owner:User.UserRole.Name , 
 IF(
  RIGHT(Owner:User.UserRole.Name , 8) == &apos; Manager&apos;
  , LEN(Owner:User.UserRole.Name ) - 8
  , LEN(Owner:User.UserRole.Name ) - 5
 )
) == LEFT(
 $UserRole.Name, 
 IF(
  RIGHT($UserRole.Name, 8) == &apos; Manager&apos;
  , LEN($UserRole.Name) - 8
  , LEN($UserRole.Name) - 5
 )
)</formula>
        <label>Is My Department Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_User_Cannot_Delete_This_Record__c</fullName>
        <formula>AND( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , NOT($Setup.Bypass__c.Business_Rules_for_Edit_and_Delete__c)
 , ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;) 
 , (TODAY() - DATEVALUE(CreatedDate) ) &gt; 2 
)</formula>
        <label>Portal User Cannot Delete This Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Programme_Reference_Number__c</fullName>
        <description>This is the reference number for this program</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a reference number that can be given from a department&apos;s own internal system, should you wish to. It is optional &amp; will help reconciliation between GGIS &amp; your own system, but you don&apos;t have to include one.</inlineHelpText>
        <label>Programme Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Grant Programme</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Programme_Reference_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Department_Data</fullName>
        <columns>NAME</columns>
        <columns>Programme_Reference_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_My_Department_Data__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Department&apos;s Data</label>
    </listViews>
    <nameField>
        <label>Programme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grant Programmes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Department_Check_on_update</fullName>
        <active>true</active>
        <description>This is a global validation rule to stop users from updating other department&apos;s record.</description>
        <errorConditionFormula>AND ( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;)
 , NOT(ISNEW())
 , Owner:User.UserRoleId  &lt;&gt;  $User.UserRoleId 
)</errorConditionFormula>
        <errorMessage>You don&apos;t have update privilege on this record.</errorMessage>
    </validationRules>
</CustomObject>